fix margin on mobile

--- a/apps/web/src/styles/components/common/_swapBanner.scss
+++ b/apps/web/src/styles/components/common/_swapBanner.scss
@@ -11,7 +11,7 @@
   margin: 2rem 0 0 0;
 
   @media (max-width: 768px) {
-    margin: 1rem 0 0.5rem 0;
+    margin: 2rem 0 0.5rem 0;
   }
 
   &__background {
